# aoc2025

./: .gitignore  README.md  pyproject.toml
src/day1/: main.py
src/day2/: main.py
src/day3/: main.py
src/day4/: main.py
src/day5/: main.py
src/day6/: main.py
src/day7/: main.py
src/day8/: main.py
src/day9/: main.py
