[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025 - Dario Varotto"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[[tool.uv.index]]
url = "https://gsrio.jfrog.io/artifactory/api/pypi/gsr-pypi/simple"
default = true
